updating files missed in last commit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>BussMall Market Analysis</title>
-    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -15,6 +15,6 @@
     <section id="two"></section>
     <section id="three"></section>
 
-    <script = "js/app.js"></script>
+    <script src= "js/app.js"></script>
   </body>
 </html>
