--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <meta charset="utf-8">
     <title>BussMall Market Analysis</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-
   <body>
     <h1>Click on the item you're most likely to buy</h1>
-
-    <section id="one"></section>
-    <section id="two"></section>
-    <section id="three"></section>
-
+    <form id="polling">
+      <fieldset>
+        <div ="image-container">
+          <section id="one"></section>
+          <section id="two"></section>
+          <section id="three"></section>
+        </div>
+        <button id="view-results">View Results</button>
+      </fieldset>
+    </form>
     <script src= "js/app.js"></script>
   </body>
 </html>
